// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDeleteIllustration renders with borders 1`] = `
<div>
  <div
    class="payment-delete-illustration__wrapper"
  >
    <div
      class="payment-delete-illustration__illustrations"
    >
      <svg
        class="gridicon gridicons-cross-circle payment-delete-illustration__payment-cross-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M19.1 4.9C15.2 1 8.8 1 4.9 4.9S1 15.2 4.9 19.1s10.2 3.9 14.1 0 4-10.3.1-14.2zm-4.3 11.3L12 13.4l-2.8 2.8-1.4-1.4 2.8-2.8-2.8-2.8 1.4-1.4 2.8 2.8 2.8-2.8 1.4 1.4-2.8 2.8 2.8 2.8-1.4 1.4z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PaymentDeleteIllustration renders with icon 1`] = `
<div>
  <div
    class="payment-delete-illustration__wrapper"
  >
    <div
      class="payment-delete-illustration__illustrations"
    >
      <img
        alt=""
        class="payment-delete-illustration__payment-icon"
        src="assets/images/cards/woo-card.svg"
      />
      <svg
        class="gridicon gridicons-cross-circle payment-delete-illustration__payment-cross-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M19.1 4.9C15.2 1 8.8 1 4.9 4.9S1 15.2 4.9 19.1s10.2 3.9 14.1 0 4-10.3.1-14.2zm-4.3 11.3L12 13.4l-2.8 2.8-1.4-1.4 2.8-2.8-2.8-2.8 1.4-1.4 2.8 2.8 2.8-2.8 1.4 1.4-2.8 2.8 2.8 2.8-1.4 1.4z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PaymentDeleteIllustration renders without props 1`] = `
<div>
  <div
    class="payment-delete-illustration__wrapper"
  >
    <div
      class="payment-delete-illustration__illustrations"
    >
      <svg
        class="gridicon gridicons-cross-circle payment-delete-illustration__payment-cross-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M19.1 4.9C15.2 1 8.8 1 4.9 4.9S1 15.2 4.9 19.1s10.2 3.9 14.1 0 4-10.3.1-14.2zm-4.3 11.3L12 13.4l-2.8 2.8-1.4-1.4 2.8-2.8-2.8-2.8 1.4-1.4 2.8 2.8 2.8-2.8 1.4 1.4-2.8 2.8 2.8 2.8-1.4 1.4z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
